add model relations

--- a/app/views/merchants/dashboard.html.erb
+++ b/app/views/merchants/dashboard.html.erb
@@ -1,5 +1,8 @@
 <h2><%= @merchant.name %></h2>
-<div>
+<nav>
 	<%= link_to "My Items", "/merchants/#{@merchant.id}/items" %>
 	<%= link_to "My Invoices", "/merchants/#{@merchant.id}/invoices" %>
-</div>
+</nav>
+<section>
+
+</section>
